--- a/index.html
+++ b/index.html
@@ -16,7 +16,47 @@
 <link rel="stylesheet" href="./css/rodape.css">
 </head>
 <body>
-   
+    <header class="cabecalho">
+        <nav class="cabecalho__nav">
+            <ul class="cabecalho__nav__list">
+                <!-- logo nav-->
+                <li>
+                    <h1 class="cabecalho__logo">
+                        <img src="./assets/icons/logo.svg" alt="logo da use dev">
+                    </h1>
+                </li>
+                <!-- botão nav sobre nós -->
+                <li class="cabecalho__nav__list__item">
+                    <a href="#" class="cabecalho__nav__list__link">
+                        Sobre nós
+                    </a>
+                </li>
+                <!-- input nav de pesquisa -->
+                <li class="cabecalho__nav__list__item cabecalho__nav__list__item-input">
+                    <input type="search" id="search" placeholder="O que você procura?" class="cabecalho__nav__list__input">
+                    <img src="./assets/icons/search.svg" alt="lupa" class="pesquisa-icon">
+                </li>
+                <!-- Botão nav login -->
+                <li class="cabecalho__nav__list__item">
+                    <a href="#" class="cabecalho__nav__list__link cabecalho__nav__list__link-login">
+                        Login
+                    </a>
+                </li>
+                <!-- Botão nav perfil -->
+                <li class="cabecalho__nav__list__item">
+                    <a href="#" class="cabecalho__nav__list__item cabecalho__nav__list__item-perfil">
+                        <img src="./assets/icons/perfil.svg" alt="Perfil">
+                    </a>
+                </li>
+                <!-- Botão nav carrinho -->
+                <li class="cabecalho__nav__list__item">
+                    <a href="#" class="cabecalho__nav__list__item cabecalho__nav__list__item-carrinho">
+                        <img src="./assets/icons/carrinho.svg" alt="Carrinho">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
